2003-02-19  Olivier Chapuis  <olivier.chapuis@free.fr>

	* packages/alsa/c/src/alsaaudioport.c
	(alsaaudioport_open_input):
	(alsaaudioport_open_output):
	(alsastream_open):
	Closed the pcm if an error occur. Do not log error msg when the null
	plugin is used

	* packages/alsa/c/src/alsaaudiomanager.c
	(alsaaudiomanager_get_channels_max): 
	Closed the pcm handle if we cannot get the hw config
	
2003-02-18  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* add a popup "Open File" DialogBox if readsf/writesf object receive open message 
	without argument

2003-02-17  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* udpsend now use fts_binary_protocol for message encoding
	
	* udpsend now use a fts_udpstream_t instead of his own udp socket implementation.
	
	* add disconnect support for udpin/udpout objects
	
	* add disconnect function for fts_udpstream_t

	* change constructor in fts_udpstream_t (only connected if 2 argument are given)
	
	* add enconding functions for binary protocol
	
	* add udpin and udpout object (jmax/packages/io/c/src/udp.c).
	  these new object are used to create an udp connection. They use a fts_udpstream_t object for communication abstraction.

	* clean fts_udpstream_t implementation (use recv/send instead of read/write see man socket(2))	

2003-02-13  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* add fts_udpstream_t in bytestream.c

	* udpreceive now use a fts_udpstream_t instead of his own udp socket implementation
	
	* start to separate client and binary protocol decoder
	  files added :
	    jmax/fts/binaryprotocol.c
	    jmax/include/fts/binaryprotocol.h
	  
	   Actually client still contains binary protocol decoder code, but it will change in a few days.
	   We need to add "callback" when decoding, there is specific client code in end_message_action and end_object_action functions.

	 * udpreceive.c now use fts_binary_protocol for message decoding

2003-02-13  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>
